templates/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Fri May  1 17:36:15 2026
*nat
:PREROUTING ACCEPT [9079:1083887]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
-A PREROUTING -p tcp -m tcp --dport 21 -j REDIRECT --to-ports 10021
-A PREROUTING -p tcp -m tcp --dport 22 -j REDIRECT --to-ports 10022
-A PREROUTING -p tcp -m tcp --dport 23 -j REDIRECT --to-ports 10023
-A PREROUTING -p tcp -m tcp --dport 25 -j REDIRECT --to-ports 10025
-A PREROUTING -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 10053
-A PREROUTING -p tcp -m tcp --dport 110 -j REDIRECT --to-ports 10110
-A PREROUTING -p tcp -m tcp --dport 135 -j REDIRECT --to-ports 10135
-A PREROUTING -p tcp -m tcp --dport 139 -j REDIRECT --to-ports 10139
-A PREROUTING -p tcp -m tcp --dport 143 -j REDIRECT --to-ports 10143
-A PREROUTING -p tcp -m tcp --dport 445 -j REDIRECT --to-ports 10445
-A PREROUTING -p tcp -m tcp --dport 993 -j REDIRECT --to-ports 10993
-A PREROUTING -p tcp -m tcp --dport 995 -j REDIRECT --to-ports 10995
COMMIT
# Completed on Fri May  1 17:36:15 2026
